--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-kakao-maps-sdk": "^1.1.9",
     "react-multi-carousel": "^2.8.4",
     "react-time-picker": "^6.2.0",
     "tailwindcss": "^3.3.2",
