--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.4",
     "postcss": "^8.4.24",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-kakao-maps-sdk": "^1.1.9",
