--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.44.3",
     "react-kakao-maps-sdk": "^1.1.9",
     "react-time-picker": "^6.2.0",
+    "recharts": "^2.7.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.2.0",
