--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "recharts": "^2.7.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
   },
@@ -38,6 +39,7 @@
     "@next/eslint-plugin-next": "^13.4.4",
     "@types/react-query": "^1.2.9",
     "@types/react-time-picker": "^6.0.0",
+    "@types/uuid": "^9.0.2",
     "@types/yup": "^0.32.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
