--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^4.10.1",
     "react-kakao-maps-sdk": "^1.1.9",
     "react-time-picker": "^6.2.0",
     "tailwindcss": "^3.3.2",
