--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
+    "@types/lodash": "^4.14.195",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -21,6 +22,7 @@
     "chart.js": "^4.3.0",
     "dayjs": "^1.11.8",
     "eslint-config-next": "^13.4.4",
+    "lodash": "^4.17.21",
     "next": "13.4.4",
     "postcss": "^8.4.24",
     "react": "18.2.0",
