--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "dayjs": "^1.11.8",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint-config-next": "^13.4.4",
     "lodash": "^4.17.21",
     "next": "13.4.4",
@@ -29,6 +31,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.10.1",
     "react-kakao-maps-sdk": "^1.1.9",
@@ -41,7 +44,10 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.4",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/react-chartjs-2": "^2.5.7",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-query": "^1.2.9",
     "@types/react-time-picker": "^6.0.0",
     "@types/uuid": "^9.0.2",
