--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "eslint-config-next": "^13.4.4",
+    "html-to-draftjs": "^1.5.0",
     "lodash": "^4.17.21",
     "next": "13.4.4",
     "postcss": "^8.4.24",
@@ -36,6 +37,7 @@
     "react-icons": "^4.10.1",
     "react-kakao-maps-sdk": "^1.1.9",
     "react-time-picker": "^6.2.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
